Fix some spacing things

--- a/client/src/apps/party-manager/character-view/page-control/styles.less
+++ b/client/src/apps/party-manager/character-view/page-control/styles.less
@@ -1,10 +1,10 @@
 :local {
 	.container {
-		position: absolute;
 		display: flex;
 		width: 100%;
 		justify-content: center;
 		bottom: 10px;
+		margin: 15px 0;
 
 		.icon {
 			color: #717171;
