--- a/client/src/apps/party-manager/character-view/page-two/styles.less
+++ b/client/src/apps/party-manager/character-view/page-two/styles.less
@@ -1,5 +1,7 @@
 :local {
 	.container {
 		display: flex;
+		padding: 0 0 0 10px;
+		flex-grow: 1;
 	}
 }
