--- a/client/src/apps/party-manager/character-view/styles.less
+++ b/client/src/apps/party-manager/character-view/styles.less
@@ -2,9 +2,17 @@
 
 :local {
 
+	.container {
+		display: flex;
+		flex-direction: column;
+	}
+
 	.wrapper {
 		position: relative;
 		color: @white;
+		display: flex;
+		flex-direction: column;
+		flex-grow: 1;
 	}
 
 	.stats-bar-wrapper {
